# ShopEase

./: .gitignore  PROJECT_REPORT.docx  PROJECT_REPORT.md  PROJECT_REPORT.rtf  README.md  create_report.py
.github/workflows/: azure-static-web-apps.yml  main_shopease-bula.yml  main_shopease-bula1.yml
Backend/: package-lock.json  package.json  server.js  web.config
Backend/config/: db.js
Backend/middleware/: auth.js
Backend/models/: Order.js  Product.js  User.js
Backend/routes/: admin.js  auth.js  cart.js  orders.js  products.js
Frontend/: package-lock.json  package.json
Frontend/public/: index.html
Frontend/src/: App.js  index.css  index.js
Frontend/src/components/: ChatWidget.css  ChatWidget.jsx  Footer.css  Footer.js  Loading.css  Loading.js  Logo.css  Logo.js  Navbar.css  Navbar.js  ProductCard.css  ProductCard.js
Frontend/src/context/: AdminAuthContext.js  AuthContext.js  CartContext.js
Frontend/src/pages/: Auth.css  Cart.css  Cart.js  Checkout.css  Checkout.js  Home.css  Home.js  Login.js  Orders.css  Orders.js  ProductDetail.css  (+4 more)
azure-logs/deployments/: active  latest.json
chatbot/: README.md
chatbot/backend/: .env.example  .gitignore  Dockerfile  HF_README.md  chatbot.db  pyproject.toml  requirements.txt  run.py
chatbot/backend/app/: __init__.py  config.py  database.py  main.py
chatbot/backend/app/models/: __init__.py  chat.py
chatbot/backend/app/routers/: admin.py  chat.py
chatbot/backend/app/schemas/: __init__.py  chat.py
chatbot/backend/app/services/: __init__.py  agent.py  context.py  embeddings.py  vector_store.py
(+39 files in other folders)
